import outils3d.Dessinable;

public abstract class Scene implements Dessinable {}
